# bytextjepa

./: .env.template  .gitignore  README.md  cfg.yml  eval.py  eval_codiesp.py  eval_imdb.py  pyproject.toml  train.py
src/: utils.py
src/aug/: augmentations.py
src/data/: base_tokenizer.py  byte_tokenizer.py  dataset.py
src/loss/: full_loss.py  jepa_loss.py
src/mlm/: __init__.py  dataset.py  loss.py  model.py
src/model/: cnn_byte_model.py  model.py
