[project]
name = "bytextjepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "lejepa",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.7.1",
    "transformers>=5.8.0",
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
lejepa = { git = "https://github.com/galilai-group/lejepa.git" }
